--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -124,6 +124,7 @@
   (linkedin, $linkedin-color);
   (github, $github-color);
   (orcid, $orcid-color);
+  (bluesky, $bluesky-color);
 
   @each $socialnetwork, $color in $social {
     &--#{$socialnetwork} {
