--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -122,9 +122,9 @@
   (twitter, $twitter-color),
   (google-plus, $google-plus-color),
   (linkedin, $linkedin-color);
-  (github, $github-color);
-  (orcid, $orcid-color);
-  (bluesky, $bluesky-color);
+ # (github, $github-color);
+ # (orcid, $orcid-color);
+ # (bluesky, $bluesky-color);
 
   @each $socialnetwork, $color in $social {
     &--#{$socialnetwork} {
